# TFTSimulator

./: .gitignore  CMakeLists.txt  README.md  TFTSimulator.code-workspace
TFTSimulator/: CMakeLists.txt
TFTSimulator/src/: main.c  main02.c
TFTSimulator/src/fonts/: font_12.c
